--- a/requirements.txt
+++ b/requirements.txt
@@ -1,109 +1,22 @@
-absl-py==1.0.0
-astunparse==1.6.3
-async-generator==1.10
-async-timeout==4.0.2
-attrs==21.4.0
-beautifulsoup4==4.11.1
-cachetools==4.2.4
-certifi==2021.10.8
-cffi==1.15.1
-charset-normalizer==2.0.7
-click==8.0.3
-colorama==0.4.4
-colorgram.py==1.2.0
-cryptography==37.0.2
-cycler==0.11.0
-decorator==5.1.1
-Deprecated==1.2.13
-dnspython==2.2.1
-dominate==2.7.0
-email-validator==1.2.1
-Flask==2.1.2
-Flask-Bootstrap==3.3.7.1
-Flask-CKEditor==0.4.6
-Flask-Gravatar==0.5.0
-Flask-Login==0.6.2
-Flask-SQLAlchemy==2.4.4
-Flask-WTF==1.0.1
-flatbuffers==2.0
-gast==0.4.0
-google-auth==2.3.3
-google-auth-oauthlib==0.4.6
-google-pasta==0.2.0
-greenlet==1.1.2
-grpcio==1.41.1
 gunicorn==20.1.0
-h11==0.13.0
-h5py==3.5.0
-idna==3.3
-importlib-metadata==4.12.0
-itsdangerous==2.1.2
-Jinja2==3.1.2
-joblib==1.1.0
-keras==2.7.0
-Keras-Preprocessing==1.1.2
-kiwisolver==1.3.2
-libclang==12.0.0
-lxml==4.9.0
-Markdown==3.3.4
-MarkupSafe==2.1.1
-matplotlib==3.4.3
-nltk==3.6.5
-numpy==1.21.3
-oauthlib==3.1.1
-opencv-python==4.5.5.62
-opt-einsum==3.3.0
-outcome==1.2.0
-packaging==21.3
-pandas==1.3.4
-Pillow==8.4.0
-prettytable==3.2.0
-protobuf==3.19.1
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycparser==2.21
-PyJWT==2.4.0
-pyOpenSSL==22.0.0
-pyparsing==3.0.9
-pyperclip==1.8.2
-PySocks==1.7.1
-python-dateutil==2.8.2
-python-dotenv==0.20.0
-pytz==2021.3
-PyWavelets==1.2.0
-redis==4.3.4
-regex==2021.11.2
-requests==2.26.0
-requests-oauthlib==1.3.0
-rsa==4.7.2
-scikit-learn==1.0.2
-scipy==1.7.3
-selenium==4.3.0
-six==1.16.0
-sniffio==1.2.0
-sortedcontainers==2.4.0
-soupsieve==2.3.2.post1
-spotipy==2.20.0
-SQLAlchemy==1.3.23
-tensorboard==2.7.0
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.0
-tensorflow==2.7.0
-tensorflow-estimator==2.7.0
-tensorflow-io-gcs-filesystem==0.22.0
-termcolor==1.1.0
-threadpoolctl==3.0.0
-tqdm==4.62.3
-trio==0.21.0
-trio-websocket==0.9.2
-twilio==7.9.3
-typing-extensions==3.10.0.2
-urllib3==1.26.7
+certifi==2020.6.20
+chardet==3.0.4
+click==7.1.2
+dominate==2.5.2
+Flask==1.1.2
+Flask-Bootstrap==3.3.7.1
+Flask-CKEditor==0.4.4.1
+Flask-Gravatar==0.5.0
+Flask-Login==0.5.0
+Flask-SQLAlchemy==2.4.4
+Flask-WTF==0.14.3
+idna==2.10
+itsdangerous==1.1.0
+Jinja2==2.11.2
+MarkupSafe==1.1.1
+requests==2.24.0
+SQLAlchemy==1.3.19
+urllib3==1.25.10
 visitor==0.1.3
-wcwidth==0.2.5
-webdriver-manager==3.7.1
-Werkzeug==2.0.2
-wrapt==1.13.3
-wsproto==1.1.0
-WTForms==3.0.1
-zipp==3.8.0
+Werkzeug==1.0.1
+WTForms==2.3.3
